[gd_scene load_steps=2 format=3 uid="uid://bdgb0ypkjrnjf"]

[ext_resource type="Script" uid="uid://vbx7x5pvtxay" path="res://scripts/ui/lander_hud.gd" id="1_51ahh"]

[node name="LanderHUD" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_51ahh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 80.0
offset_bottom = 203.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(220, 250)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "Title"
vertical_alignment = 1

[node name="WindLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "Wind"
vertical_alignment = 1

[node name="GravityLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "Gravity"
vertical_alignment = 1

[node name="AltitudeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "Altitude"
vertical_alignment = 1

[node name="FuelContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="FuelLabel" type="Label" parent="MarginContainer/VBoxContainer/FuelContainer"]
layout_mode = 2
text = "Fuel"
vertical_alignment = 1

[node name="FuelBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/FuelContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
step = 1.0
